--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,25 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ejemplos.dam.animation.FragmentDashboard">
 
     <TextView
         android:id="@+id/textViewDashboard"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_dashboard_black_24dp"
+        android:gravity="center_horizontal"
         android:text="Dashboard"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:drawableTop="@drawable/ic_dashboard_black_24dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextDashboard"
-        android:layout_width="match_parent"
+        android:layout_width="161dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        />
+        android:hint="Introduzca clave"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDashboard"
+        app:layout_constraintVertical_bias="0.75" />
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
